# acts-core-test

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: checks.yml  pr.yml
CI/: check_format  check_include_guards.py  check_license.py  requirements.txt
Core/: CMakeLists.txt
Core/src/Detector/: TrackingVolume.cpp
Core/src/EventData/: TrackParametersBase.cpp
Core/src/Geometry/: AbstractVolume.cpp  BinUtility.cpp  CMakeLists.txt  CompoundLayer.cpp  ConeLayer.cpp  ConicalVolumeBounds.cpp  CuboidVolumeBounds.cpp  CuboidVolumeBuilder.cpp  CutoutCylinderVolumeBounds.cpp  CylinderLayer.cpp  CylinderVolumeBounds.cpp  CylinderVolumeBuilder.cpp  CylinderVolumeHelper.cpp  DiscLayer.cpp  DoubleTrapezoidVolumeBounds.cpp  GenericApproachDescriptor.cpp  GenericCuboidVolumeBounds.cpp  GeometryID.cpp  GlueVolumesDescriptor.cpp  Layer.cpp  LayerArrayCreator.cpp  LayerCreator.cpp  NavigationLayer.cpp  PassiveLayerBuilder.cpp  PlaneLayer.cpp  Polyhedron.cpp  ProtoLayer.cpp  SurfaceArrayCreator.cpp  SurfaceArrayHelper.cpp  TrackingGeometry.cpp  TrackingVolume.cpp  TrapezoidVolumeBounds.cpp  Volume.cpp  VolumeBounds.cpp
Core/src/MagneticField/: BFieldMapUtils.cpp  SolenoidBField.cpp
Core/src/Material/: AccumulatedSurfaceMaterial.cpp  AccumulatedVolumeMaterial.cpp  BinnedSurfaceMaterial.cpp  CMakeLists.txt  HomogeneousSurfaceMaterial.cpp  MaterialMapUtils.cpp  MaterialProperties.cpp  ProtoSurfaceMaterial.cpp  SurfaceMaterialMapper.cpp  VolumeMaterialMapper.cpp
Core/src/Propagator/: StraightLineStepper.cpp
Core/src/Surfaces/: AnnulusBounds.cpp  CMakeLists.txt  ConeBounds.cpp  ConeSurface.cpp  CylinderBounds.cpp  CylinderSurface.cpp  DiamondBounds.cpp  DiscSurface.cpp  DiscTrapezoidBounds.cpp  DiscTrapezoidalBounds.cpp  (+13 more)
Plugins/DD4hep/: CMakeLists.txt
Plugins/Json/: CMakeLists.txt
Tests/Benchmarks/: AtlasStepperBenchmark.cpp
Tests/Core/Vertexing/: CMakeLists.txt  FullBilloirVertexFitterTests.cpp  ImpactPoint3dEstimatorTests.cpp  IterativeVertexFinderTests.cpp  LinearizedTrackFactoryTests.cpp  MultiAdaptiveVertexFitterTests.cpp  SpacePointVertexFinderTests.cpp  TrackLinearizerTests.cpp  TrackToVertexIPEstimatorTests.cpp  ZScanVertexFinderTests.cpp
Tests/Integration/: ATLSeedingIntegrationTest.cpp  InterpolatedSolenoidBFieldTest.cpp  PropagationTestBase.hpp  PropagationTestHelper.hpp  PropagationTests.cpp  PropagationTestsAtlasField.cpp  covariance_validation_fixture.hpp
Tests/IntegrationTests/: PropagationTestBase.hpp  PropagationTestHelper.hpp  PropagationTests.cpp
(+492 files in other folders)
