add_executable (FullBilloirVertexFitterTests FullBilloirVertexFitterTests.cpp)
target_include_directories (FullBilloirVertexFitterTests PRIVATE ${Boost_INCLUDE_DIRS})
target_link_libraries (FullBilloirVertexFitterTests PRIVATE ActsCore ActsTestsCommonHelpers ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
add_test (NAME FullBilloirVertexFitterUnitTests COMMAND FullBilloirVertexFitterTests)
acts_add_test_to_cdash_project (PROJECT ACore TEST FullBilloirVertexFitterUnitTests TARGETS FullBilloirVertexFitterTests)

add_executable (TrackLinearizerTests TrackLinearizerTests.cpp)
target_include_directories (TrackLinearizerTests PRIVATE ${Boost_INCLUDE_DIRS})
target_link_libraries (TrackLinearizerTests PRIVATE ActsCore ActsTestsCommonHelpers ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
add_test (NAME TrackLinearizerUnitTests COMMAND TrackLinearizerTests)
acts_add_test_to_cdash_project (PROJECT ACore TEST TrackLinearizerUnitTests TARGETS TrackLinearizerTests)

add_executable (TrackToVertexIPEstimatorTests TrackToVertexIPEstimatorTests.cpp)
target_include_directories (TrackToVertexIPEstimatorTests PRIVATE ${Boost_INCLUDE_DIRS})
target_link_libraries (TrackToVertexIPEstimatorTests PRIVATE ActsCore ActsTestsCommonHelpers ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
add_test (NAME TrackToVertexIPEstimatorUnitTests COMMAND TrackToVertexIPEstimatorTests)
acts_add_test_to_cdash_project (PROJECT ACore TEST TrackToVertexIPEstimatorUnitTests TARGETS TrackToVertexIPEstimatorTests)

add_executable (ZScanVertexFinderTests ZScanVertexFinderTests.cpp)
target_include_directories (ZScanVertexFinderTests PRIVATE ${Boost_INCLUDE_DIRS})
target_link_libraries (ZScanVertexFinderTests PRIVATE ActsCore ActsTestsCommonHelpers ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
add_test (NAME ZScanVertexFinderUnitTests COMMAND ZScanVertexFinderTests)
acts_add_test_to_cdash_project (PROJECT ACore TEST ZScanVertexFinderUnitTests TARGETS ZScanVertexFinderTests)

add_executable (IterativeVertexFinderTests IterativeVertexFinderTests.cpp)
target_include_directories (IterativeVertexFinderTests PRIVATE ${Boost_INCLUDE_DIRS})
target_link_libraries (IterativeVertexFinderTests PRIVATE ActsCore ActsTestsCommonHelpers ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
add_test (NAME IterativeVertexFinderUnitTests COMMAND IterativeVertexFinderTests)
acts_add_test_to_cdash_project (PROJECT ACore TEST IterativeVertexFinderUnitTests TARGETS IterativeVertexFinderTests)
